# feather-joplin-bridge

./: .gitignore  Cargo.toml  Feather-Nodes-example.fnx  Feather-content-example.fnx  README.md  purged code.txt
.cargo/: config
API Tests/: get folders.http  get note body.http  get note.http  get notes.http  get resources.http  get specific folder.http  ping.http
export_html/: .gitignore  Cargo.toml
export_html/src/: main.rs
src/: convert_logic.rs  main.rs  pandoc.rs
src/data_types/: feather.rs  joplin.rs  mod.rs
