[package]
name = "feather-joplin-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
log = "0.4.0"
env_logger = "0.10.0"
pandoc = "0.8.10"
rand = "0.8.5"
quick-xml = { version = "0.27.1", features = ["serialize", "overlapped-lists", "serde-types"] }
serde_json = "1.0.93"
serde = { version = "1.0.100", default-features = false, features = ["derive"] }
regex = "1.7.2"
