[package]
name = "feather-joplin-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Szybet, https://github.com/Szybet"]
repository = "https://github.com/Szybet/feather-joplin-bridge"
description = "Program to bridge Joplin and Feathernotes, to be able sync notes between them"

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
log = "0.4.0"
env_logger = "0.10.0"
pandoc = "0.8.10"
rand = "0.8.5"
quick-xml = { version = "0.27.1", features = ["serialize", "overlapped-lists", "serde-types"] }
serde_json = "1.0.93"
serde = { version = "1.0.100", default-features = false, features = ["derive"] }
regex = "1.7.2"
clap = { version = "4.2.1", features = ["derive"] }
